--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .env
 *.env
 node_modules/
+package-lock.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
