--- a/client/app.yaml
+++ b/client/app.yaml
@@ -1,4 +1,5 @@
 runtime: nodejs16
+service: default
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
@@ -12,3 +13,6 @@ handlers:
     upload: build/index.html
     secure: always
     redirect_http_response_code: 301
+
+
+
