--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+
+client/build/*
+client/build/static/css/main.4336c3c2.chunk.css
