--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-switch": "^7.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
