--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -23,7 +23,7 @@ jobs:
         export_default_credentials: true
 
     - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME:latest .
+      run: docker build -t $IMAGE_NAME .
 
     - name: Build Docker Google Cloud Build
       run: gcloud builds submit --tag gcr.io/$PROJECT_ID/$PROJECT_ID --project $PROJECT_ID 
