--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -22,8 +22,8 @@ jobs:
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
 
-    - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME .
+#     - name: Build Docker Image
+#       run: docker build -t $IMAGE_NAME .
 
     - name: Build Docker Google Cloud Build
       run: gcloud builds submit --tag gcr.io/$PROJECT_ID/$PROJECT_ID --project $PROJECT_ID 
