--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -22,11 +22,11 @@ jobs:
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
 
-#     - name: Build Docker Image
-#       run: docker build -t $IMAGE_NAME .
+    - name: Build Docker Image
+      run: docker build -t client .
 
     - name: Build Docker Google Cloud Build
-      run: gcloud builds submit --tag gcr.io/$PROJECT_ID/$PROJECT_ID --project $PROJECT_ID 
+      run: gcloud builds submit --tag gcr.io/acmahaja/acmahaja --project acmahaja 
 
     - name: Deploy Google Cloud Build
-      run: gcloud run deploy --image gcr.io/$PROJECT_ID/$PROJECT_ID --project $PROJECT_ID --platform managed
+      run: gcloud run deploy --image gcr.io/acmahaja/acmahaja --project acmahaja --platform managed
