--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -23,10 +23,13 @@ jobs:
         export_default_credentials: true
 
     - name: Build Docker Image
+      working-directory: ./client
       run: docker build -t client .
 
     - name: Build Docker Google Cloud Build
+      working-directory: ./client
       run: gcloud builds submit --tag gcr.io/acmahaja/acmahaja --project acmahaja 
 
     - name: Deploy Google Cloud Build
+      working-directory: ./client
       run: gcloud run deploy --image gcr.io/acmahaja/acmahaja --project acmahaja --platform managed
