--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/acmahaja/acmahaja.com",
+  "author": "@acmahaja <acmahaja@gmail.com>",
+  "license": "MIT"
 }
