--- a/.github/workflows/deployment-2023.yml
+++ b/.github/workflows/deployment-2023.yml
@@ -1,4 +1,4 @@
-name: Deploy Client
+name: Deploy 2023
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
         name: Setup Gcloud Account
         runs-on: ubuntu-latest
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/client
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
         steps:
 
         - name: Login
@@ -30,13 +30,13 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Build Docker image
-          run: docker build -t $IMAGE_NAME ./client
+          run: docker build . -t $IMAGE_NAME
+
+        - name: Test Docker image
+          run: docker run $IMAGE_NAME sh -c "go test -v"
 
         - name: Push Docker image
           run: docker push $IMAGE_NAME
 
         - name: Deploy Docker image
-          run: gcloud run deploy client --image $IMAGE_NAME --region us-east1 --platform managed
-
-        - name: Show Output
-          run: echo ${{ steps.deploy.outputs.url }}
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed
