--- a/.github/workflows/deployment-2023-dev.yml
+++ b/.github/workflows/deployment-2023-dev.yml
@@ -13,7 +13,7 @@ jobs:
         name: Setup Gcloud Account
         runs-on: ubuntu-latest
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME_DEV }}
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/client
         steps:
 
         - name: Login
@@ -30,13 +30,13 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Build Docker image
-          run: docker build -t $IMAGE_NAME ./${{ secrets.GCP_APP_NAME_DEV }}
+          run: docker build -t $IMAGE_NAME ./client
 
         - name: Push Docker image
           run: docker push $IMAGE_NAME
 
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_APP_NAME_DEV }} --image $IMAGE_NAME --region us-east1 --platform managed
+          run: gcloud run deploy client --image $IMAGE_NAME --region us-east1 --platform managed
 
         - name: Show Output
           run: echo ${{ steps.deploy.outputs.url }}
