--- a/.github/workflows/deployment-2023-dev.yml
+++ b/.github/workflows/deployment-2023-dev.yml
@@ -7,13 +7,11 @@ on:
     branches: [ '2023' ]
 
 jobs:
-
     deploy:
-
         name: Setup Gcloud Account
         runs-on: ubuntu-latest
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/client
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
         steps:
 
         - name: Login
@@ -30,13 +28,13 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Build Docker image
-          run: docker build -t $IMAGE_NAME ./client
+          run: docker build . -t $IMAGE_NAME
+
+        - name: Test Docker image
+          run: docker run $IMAGE_NAME sh -c "go test -v"
 
         - name: Push Docker image
           run: docker push $IMAGE_NAME
 
         - name: Deploy Docker image
-          run: gcloud run deploy client --image $IMAGE_NAME --region us-east1 --platform managed
-
-        - name: Show Output
-          run: echo ${{ steps.deploy.outputs.url }}
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed
