--- a/.github/workflows/deployment-2023-dev.yml
+++ b/.github/workflows/deployment-2023-dev.yml
@@ -11,7 +11,7 @@ jobs:
         name: Setup Gcloud Account
         runs-on: ubuntu-latest
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME_DEV }}
         steps:
 
         - name: Login
@@ -30,8 +30,8 @@ jobs:
         - name: Build Docker image
           run: docker build . -t $IMAGE_NAME
 
-        - name: Test Docker image
-          run: docker run $IMAGE_NAME sh -c "go test -v"
+        # - name: Test Docker image
+        #   run: docker run $IMAGE_NAME sh -c "go test -v"
 
         - name: Push Docker image
           run: docker push $IMAGE_NAME
