--- a/.github/workflows/deployment-2023-dev.yml
+++ b/.github/workflows/deployment-2023-dev.yml
@@ -11,7 +11,7 @@ jobs:
         name: Setup Gcloud Account
         runs-on: ubuntu-latest
         env:
-          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/acmahaja_dev
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME_DEV }}
         steps:
 
         - name: Login
@@ -34,4 +34,4 @@ jobs:
           run: docker push $IMAGE_NAME
 
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region asia-southeast1 --platform managed
+          run: gcloud run deploy ${{ secrets.GCP_APP_NAME_DEV }} --image $IMAGE_NAME --region asia-southeast1 --platform managed
