--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
@@ -6,18 +8,25 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-key.json
+# local env files
+.env*.local
+
+# vercel
+.vercel
