--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
+    "@wixc3/react-board": "^2.1.3"
   }
 }
