Added main navbar components

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
       "baseUrl": ".",
       "paths": {
         "@/styles/*": ["styles/*"],
-        "@/sections/*": ["sections/*"]
+        "@/sections/*": ["sections/*"],
+        "@/components/*": ["components/*"]
       }
     }
   }
