--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "aos": "^2.3.4",
+    "dotenv": "^16.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
