--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-pdf": "^7.1.2",
+    "react-pdf": "^7.4.0",
     "react-type-animation": "^3.1.0"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
