--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^1.1.1",
     "aos": "^2.3.4",
     "dotenv": "^16.3.1",
     "next": "13.1.1",
