--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@iconify/svelte": "^3.1.6",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "@types/animejs": "^3.1.12",
@@ -23,6 +24,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
     "animejs": "^3.2.2"
   }
 }
