--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-icons": "^3.0.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "svelte-carousel": "^1.0.25",
     "svelte-cloudinary": "^1.2.1"
   }
