--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@types/react-icons": "^3.0.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.7",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "moment": "^2.30.1",
+    "prettier": "^3.2.4",
     "svelte-carousel": "^1.0.25",
     "svelte-cloudinary": "^1.2.1"
   }
