--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
+		"marked": "^12.0.0",
 		"moment": "^2.30.1",
 		"prettier": "^3.2.4",
 		"svelte-carousel": "^1.0.25",
