--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/react-icons": "^3.0.0",
 		"animejs": "^3.2.2",
 		"axios": "^1.6.7",
